k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment3
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: deployment3
  template:
    metadata:
      labels:
        app: deployment3
    spec:
      containers:
        - name: simple-app3
          image: vietaws/eks:v2
          ports:
            - containerPort: 8080
          resources:
            # Recommended
            requests:
              memory: "128Mi"
              cpu: "256m"
            limits:
              memory: "128Mi"
              # cpu: "512m"
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pvc-data
