k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-1
spec:
  containers:
    - name: simpe-app
      image: vietaws/eks:v1
      ports:
        - containerPort: 8080
