k8s/clusterIp.yaml
apiVersion: v1
kind: Service
metadata:
  name: clusterip-svc
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8080
