k8s/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: deployment3
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
