k8s/nodePort.yaml
apiVersion: v1
kind: Service
metadata:
  name: service3
  namespace: dev
spec:
  type: NodePort
  selector:
    app: deployment3
  ports:
    - port: 8080
      targetPort: 8080
      # nodePort: 30007
